springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: springboot
  name: springboot
spec:
  type: LoadBalancer
  ports:
  - name: "9090"
    port: 9090
    targetPort: 8080
  selector:
    io.kompose.service: springboot
